feat(*): add `availableSpells`
