# server/src/app/controllers/game.controller.php
@@ -273,6 +273,48 @@ class GameController
           ],
           "xpPercentageFromKills" => $xpFromKillsPercentage
         ],
+        "availableSpells" => [
+          "level_1" => [
+            [
+              "displayName" => "Levitation",
+              "action" => [
+                "key" => "CAST",
+                "payload" => "b77cc1a0-91ec-4d64-bb6d-21717737ea3c",
+                "isClientSideOnly" => false
+              ]
+            ]
+          ],
+          "level_2" => [
+            [
+              "displayName" => "Invisibility",
+              "action" => [
+                "key" => "CAST",
+                "payload" => "9b3ea5f2-e43b-44d0-83f3-e2d97dfff065",
+                "isClientSideOnly" => false
+              ]
+            ]
+          ],
+          "level_3" => [
+            [
+              "displayName" => "Immortality",
+              "action" => [
+                "key" => "CAST",
+                "payload" => "bdf61c73-d9e3-41e2-b05d-4433caf2e650",
+                "isClientSideOnly" => false
+              ]
+            ]
+          ],
+          "level_4" => [
+            [
+              "displayName" => "Teleportation",
+              "action" => [
+                "key" => "CAST",
+                "payload" => "a012e1e0-59ad-4f0c-b230-d911d91086cd",
+                "isClientSideOnly" => false
+              ]
+            ]
+          ]
+        ],
         "events" => $this->getEvents($tiles, $lastAction, $events, $lastActionTarget),
         "possibleActions" => $actionsManager->getPossibleActions($tiles, $this->getGameState()),
         "mapState" => array_map(
